# DRT_ideahack

./: .gitignore  FASTAPI_MIGRATION.md  README.md  dockerfile  pyproject.toml  temp.html
.github/workflows/: ls_build_drt.yml
src/app/: main.py  main_fastapi.py
src/app/static/: temp_map.html
src/app/static/css/: style.css
src/app/static/data/: bus_stops.geojson
src/app/static/js/: script.js  secondPage.js
src/app/static/resource/: drt_img1.avif
src/app/static/templates/: index.html
src/app/templates/: index.html  map.html  secondPage.html  second_page.html  second_page_fastapi.html
src/data/: drt_gtfs.py  route_filter.py  vehicles.csv  vehicles4.csv
src/utils/: location.py
src/utils/cache/: nominatim-64b367b08a70846177aebe76e165baf8ced93783  nominatim-e0cfcb0cf67979a14c2943315dfddb10131d1571
tests/: test_drt_gtfs.py  test_main.py  test_main_fastapi.py
