[project]
name = "drt-ideahack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.11",
    "flask>=3.1.0",
    "folium>=0.19.5",
    "geopy>=2.4.1",
    "gtfs-realtime-bindings>=1.0.0",
    "gunicorn>=23.0.0",
    "ipykernel>=6.29.5",
    "osmpythontools>=0.3.5",
    "pip>=25.0.1",
    "pytest>=8.4.2",
    "pytz>=2025.1",
    "requests>=2.32.3",
    "uvicorn>=0.34.0",
]
